# syncd

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: aggregation.rs  cli.rs  config.rs  daemon.rs  errors.rs  ignore.rs  ipc.rs  lib.rs  main.rs  paths.rs  scheduler.rs  selection.rs  state.rs  state_updates.rs  sync.rs  watcher.rs
tests/: ipc_integration.rs
